<resources>
    <string name="app_name">JUST ET IT!</string>
    <string name="recipe_list_title">Recipes</string>
    <string name="left_overs_title">Use up leftovers</string>
    <string name="food_for_life">FOOD FOR LIFE</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipes_text">RECIPES</string>
    <string name="powered_by">Powered by Recipe Puppy</string>
    <string name="intro_one_title">Over a million recipes.</string>
    <string name="intro_one_description">Browse through a database of over a million recipes and cook something new daily.</string>
    <string name="intro_two_title">Got leftovers from last night? No problem.</string>
    <string name="intro_two_description">Search recipes based on the leftovers from last meal and Say No To Food Waste.</string>
    <string name="refresh_text">Tap above icon to refresh</string>
    <string name="banner_ad_unit_id">ca-app-pub-1032374578265411/5123181488</string>
    <string name="action_search_title">Search</string>
    <string name="settings_title">Settings</string>
    <string name="help_title">Help</string>
    <string name="about_title">About</string>
    <string name="leftover_button_text">USE UP LEFTOVERS</string>
    <string name="leftovers_edit_text_hint">Enter leftovers comma separated</string>
    <string name="search_hint">Search a recipe</string>
    <string name="action_share_title">Share</string>
    <string name="intro_three_title">Searching for a recipe?</string>
    <string name="intro_three_description">Search a database of over a million recipes with just a few clicks.</string>
    <string name="no_results_text">No results found.</string>
    <string name="version">Version 3.0</string>
    <string name="icons">Icons Used</string>
    <string name="help">JUST ET IT! is a simple app to browse and search through a database of over a million of recipes. It provides you a clean, simple and intuitive user interface. Apart from search and browsing, you can also search for recipes using the leftovers from your last meal as well. </string>
    <string name="help2">How to search recipes?</string>
    <string name="help3">Just click on the search icon on the right side of the toolbar, enter the recipe to search and hit the arrow in the soft keyboard.</string>
    <string name="help4">What is \"Use up leftovers\"?</string>
    <string name="help5">In this section you can search recipes based on whatever things are left from you last meal or whatever ingredients you have. Enter the leftovers or the ingredients separated by comma , eg : egg,onion,cheese. And hit the search icon in the soft keyboard.</string>

</resources>
