<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/leftovers_edit_text"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:background="@drawable/curved_rectangle"
            android:gravity="center"
            android:hint="@string/leftovers_edit_text_hint"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:textCursorDrawable="@null"
            android:textSize="16sp" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:id="@+id/leftovers_recipe_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ProgressBar
            android:id="@+id/loading_progress_bar_leftovers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:indeterminateDrawable="@drawable/progress"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/refresh_button_and_text_leftovers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageButton
                android:id="@+id/refresh_button_leftovers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_update31" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/refresh_text"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/no_results_text_and_image_leftovers"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:id="@+id/no_results_leftovers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_close421" />

            <TextView
                android:id="@+id/no_results_textView_leftovers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_results_text"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>

    </FrameLayout>
</LinearLayout>
